# voicepipe

./: .env.example  .gitignore  LICENSE  MACOS_SMOKE_TEST.md  README.md  REFACTOR_PLAN.md  SPOKEN_COMMANDS_PLAN.md  TODO_LINUX_PERFORMANCE.md  TODO_REFACTOR.md  WINDOWS_COMPAT_PLAN.md  WINDOWS_SETUP_DOCUMENTATION.md  WINDOWS_SMOKE_TEST.md  ZWANGLI_PLAN.md  architecture.md  daemon_service.bat  deviceplan.md  direct_toggle_hidden.ahk  direct_toggle_stateful.ahk  fast_control.py  install-fast.sh  install-transcriber-service.sh  install.ps1  install.sh  install_macos.sh  install_voicepipe.sh  plan.md  pyproject.toml  re.sh  setup.py  setup_api_key.ps1  setup_hidden_startup.ps1  start_hotkey_truly_hidden.vbs  systray_icon.py  systray_icon_simple.py  systray_toggle.py  test-lock.sh  todo.md  transcriber_daemon.py  voicepipe-fast  voicepipe-fast-cached  (+9 more)
.github/workflows/: android.yml  desktop-tests.yml  tests.yml
android/: .gitignore  AUDIO_NOTICE.md  README.md  TESTING.md  fdroid-metadata-template.yml  local.properties.template  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/kotlin/dev/voicepipe/zwangli/: ActivitySmokeTest.kt  ClientActionExecutorAndroidTest.kt  InjectTranscriptReceiverTest.kt
android/app/src/debug/: AndroidManifest.xml
android/app/src/debug/kotlin/dev/voicepipe/zwangli/debug/: InjectTranscriptReceiver.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: test_manifest.json
android/app/src/main/kotlin/dev/voicepipe/zwangli/: AudioRecorder.kt  BootReceiver.kt  ClientActionExecutor.kt  ClientActions.kt  ConfiguratorActivity.kt  ConnectionTester.kt  ContactResolver.kt  DispatchClient.kt  DispatchPipeline.kt  Dto.kt  FeedbackSounds.kt  GoogleSignInClient.kt  JwtUtil.kt  MainActivity.kt  Ptt.kt  Settings.kt  SpeechRecognition.kt  SpeechRecognitionController.kt  TestActivity.kt  TestModels.kt  TriggersClient.kt  ZwangliAccessibilityService.kt  ZwangliForegroundService.kt
android/app/src/main/res/drawable/: status_banner_bg.xml
android/app/src/main/res/layout/: activity_configurator.xml  activity_main.xml  activity_test.xml
android/app/src/main/res/menu/: main_menu.xml
android/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
android/app/src/test/kotlin/dev/voicepipe/zwangli/: AudioRecorderTest.kt  ClientActionsTest.kt  ConnectionTesterTest.kt  ContactResolverTest.kt  DispatchClientTest.kt  FakeSharedPreferences.kt  RelativeAlarmTest.kt  SettingsTest.kt  SpeechRecognitionTest.kt  TriggersClientTest.kt
android/fastlane/metadata/android/en-US/changelogs/: 2.txt
android/gradle/: libs.versions.toml
android/scripts/: gmsaas_start_and_connect.sh  release.sh  smoke.sh
deploy/aws/: .gitignore  Dockerfile  README.md  deploy.sh  template.yaml
examples/: systray_icon.py  systray_toggle.py
hotkey-examples/: fluxbox-keys.conf  hyprland.conf  macos-quick-action.md  sway.conf  sxhkdrc.conf  voicepipe.ahk  wayland-gnome.conf  wayland-hyprland.conf  wayland-kde.conf  wayland-sway.conf  windows-startup-hotkey.ps1  xbindkeysrc.conf
scripts/macos/: voicepipe.daemon.plist.template
tests/: _android_inject.py  _synth.py  conftest.py  regen_synth.py  test_actuator.py  test_audio_deviceplan.py  test_audio_feedback.py  test_aws_lambda_handler.py  test_calendar_intent.py  test_cli_config.py  test_cli_dictate.py  test_cli_hotkey.py  test_cli_launchd.py  test_cli_recording.py  test_cli_replay.py  test_cli_service.py  test_cli_setup.py  test_cli_smoke.py  test_cli_triggers.py  test_config.py  test_device.py  test_dispatch_server.py  test_dispatch_server_google_auth.py  test_dispatch_server_transcribe.py  test_email_intent.py  test_fast.py  test_intent_router.py  test_intents.py  test_ipc.py  test_ipc_client.py  test_last_output.py  test_live_integration.py  test_live_zwingli_audio_round1.py  test_live_zwingli_audio_round2.py  test_live_zwingli_audio_round3.py  test_live_zwingli_audio_round4.py  test_llm_route.py  test_locks.py  test_paths.py  test_pending.py  (+21 more)
tests/assets/zwingli_round1/: manifest.json
tests/assets/zwingli_round2/: manifest.json
tests/assets/zwingli_round3/: manifest.json
tests/assets/zwingli_round4/: manifest.json
tools/: release-android.sh
tools/git-hooks/: pre-push
voicepipe/: __init__.py  audio.py  audio_device.py  audio_feedback.py  aws_lambda.py  cli.py  clipboard.py  config.py  daemon.py  device.py  dispatch_server.py  elevenlabs_transcriber.py  entrypoints.py  fast.py  intent_router.py  ipc.py  last_output.py  locks.py  logging_utils.py  paths.py  pending.py  pipeline.py  platform.py  rate_limit.py  recorder.py  recording_backend.py  recording_subprocess.py  serper_client.py  session.py  systemd.py  systray.py  timeout_transcription.py  transcriber.py  transcriber_daemon.py  transcript_triggers.py  transcription.py  transcription_result.py  trigger_meta.py  typing.py  wav.py  (+2 more)
voicepipe/assets/: README.txt  recording_icon.tiff  test.expected.txt  triggers.default.json
voicepipe/commands/: __init__.py  _hints.py  config.py  doctor.py  hotkey.py  launchd.py  recording.py  replay.py  serve.py  service.py  setup.py  smoke.py  triggers.py
voicepipe/transcript_triggers/: __init__.py  _actions.py  _actuator.py  _basic.py  _codegen.py  _debug_log.py  _dispatch.py  _dry_run.py  _errors.py  _help.py  _intents.py  _llm.py  _llm_route.py  _matching.py  _pending.py  _phrase.py  _planner.py  _plugin.py  _shell.py  _template.py  _type.py
