[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "voicepipe"
version = "0.1.0"
description = "Voice recording and transcription daemon with systray integration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yourusername/voicepipe"
repository = "https://github.com/yourusername/voicepipe"
keywords = ["voice", "recording", "transcription", "cli", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "voicepipe"}]
include = ["voicepipe/assets/*"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0"
openai = "^1.0"
httpx = "^0.24"
python-dotenv = "^1.0"
pyaudio = "^0.2.11"
# Optional systray dependencies
pystray = {version = "^0.19.0", optional = true}
pillow = {version = "^10.0", optional = true}
# Windows-specific dependencies
pywin32 = {version = ">=300", platform = "win32", optional = true}
# Optional GUI automation for typing
pyautogui = {version = "^0.9.50", optional = true} # pyautogui is cross-platform but we'll initially use it for Windows typing


[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^22.0"
flake8 = "^5.0"
mypy = "^1.0"

[tool.poetry.extras]
systray = ["pystray", "pillow"]
windows-support = ["pywin32", "pyautogui"] # Added pyautogui here for Windows --type functionality
all = ["pystray", "pillow", "pywin32", "pyautogui"]

[tool.poetry.scripts]
voicepipe = "voicepipe.cli:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true